--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     android:padding="10dp"
     tools:context=".MainActivity">
     <TextView
+        android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ISMT College"
@@ -19,6 +20,7 @@
         android:textColor="@color/black"
         android:layout_marginBottom="10dp"/>
     <Button
+        android:id="@+id/btn"
         android:layout_width="400dp"
         android:layout_height="80dp"
         android:text="Click me "
